2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add comment for Adobe FrameMaker document
	(#10086), brand FrameMaker MIF document to Adobe.
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add comment for ARC archive (#10084).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-03-08  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: add comment for XMCD CD database (#10074).
	Thanks to Pino Toscano <toscano.pino@tiscali.it>.

2007-02-13  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add *.m2t as a pattern for MPEG 2 files
	(GNOME bug #406196)

=== shared-mime-info 0.20 ===

2007-02-06  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: version 0.20

2007-02-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make dia a sub-class of application/xml,
	not the alias text/xml

2007-02-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Move *.pcf.Z to application/x-font-pcf
	as it's definitely not a Postscript font, add *.pcf.gz as well
	(Closes: #4398)

2007-02-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Petr Tomasek
	<tomasek@etf.cuni.cz> to add a mime-type for the T602 word
	processor documents (Closes: #1001)

2007-02-06  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: verbose mode in install mode by default
	* configure.in: up the glib requirements to 2.2
	* update-mime-database.1:
	* update-mime-database.c: (g_log_handler), (usage), (get_type),
	(load_source_file), (write_out_glob), (write_magic_children),
	(write_magic), (delete_old_types), (check_in_path_xdg_data),
	(write_map_entry), (write_parent_entry), (write_parent_list),
	(build_suffixes), (write_suffix_entries), (write_match),
	(write_cache), (main): Patch from Loïc Minier
	<lool+freedesktop@via.ecp.fr> to make the output of