@@ -1,5 +1,12 @@
 2007-03-08  Christian Neumair  <chris@gnome-de.org>
 
+	* freedesktop.org.xml.in: make application/m3u an alias for
+	audio/x-mpegurl (#10061), and make audio/x-mpeg an alias for
+	audio/mpeg.
+	Thanks to Pino Toscano <toscano.pino@tiscali.it>.
+
+2007-03-08  Christian Neumair  <chris@gnome-de.org>
+
 	* freedesktop.org.xml.in: add comment for Adobe FrameMaker document
 	(#10086), brand FrameMaker MIF document to Adobe.
 	Thanks to Pino Toscano <toscano.pino@tiscali.it>.
